# opencl-motion-interpolation

./: README.md  bench.ods  notes.txt
Assets/: .gitignore  ball.mkv  blender-spring1.mkv  extract_frames.sh
presentation/: build.sh  presentation.html  presentation.md
presentation/media/: .gitignore  4.svg (copy)
proposal/: build.sh  citation-cache.json  proposal.md
src/: CGLTexture.cpp  CGLTexture.h  CLUtil.cpp  CLUtil.h  CMakeLists.txt  CTriMesh.cpp  CTriMesh.h  GLCommon.cpp  GLCommon.h  HLSL.cpp  HLSL.h  HLSLEx.h  MotionInterpolationTask.cpp  MotionInterpolationTask.h  Wrapper.cpp  Wrapper.h  bench.sh  bench.txt  main.cpp  meshtextured.frag  motion.cl  util.cpp  util.h
